<resources>
    <string name="app_name">SurviveRecipe</string>
    <string name="login_to_facebook">facebook으로 로그인</string>
    <string name="login_to_email">이메일로 로그인</string>
    <string name="welcome1">환영합니다!</string>
    <string name="welcome2">다시 만나서 반갑습니다!</string>
    <string name="runot_member">회원이 아니신가요?</string>
    <string name="sign_up">회원가입</string>
    <string name="need_help">도움이 필요하신가요?</string>
    <string name="find_user">아이디/비밀번호 찾기</string>
    <string name="sign_in_to_email">이메일로 회원가입</string>
    <string name="watch_personal_info_agreement">개인정보 처리방침 및 약관보기</string>
    <string name="caution_personal_info_agreement">회원가입 시 약관에 동의한 것으로 간주됩니다.</string>
    <string name="name">이름</string>
    <string name="email_addr">이메일 주소</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="login">로그인</string>
    <string name="title_activity_recipe_main">RecipeMainActivity</string>
    <string name="soge">중국 사천지방을 대표하는 마파두부는 얼굴에 얽은 자국이 있었던 할머니가 만들어낸 음식이다. 둘이 먹다 한명 죽어도 모르게 맛있고, 신부가 특히 좋아한다.</string>
    <string name="action_settings">Settings</string>
    <string name="watch_with_video">영상과 함께 보기</string>
    <string name="watch_only_photo">사진만 보기</string>
    <string name="watch_cook_profile">님의 프로필 보기</string>
    <string name="follow">팔로우</string>
    <string name="recipe">레시피</string>
    <string name="signin_email">이메일로 회원가입</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">2475875292687672</string>
    <string name="fb_login_protocol_scheme">fb2475875292687672</string>
    <string name="agree">동의</string>
    <string name="disagree">거부</string>

    <string name="filter">필터</string>
    <string name="author">게시자</string>
    <string name="category">종류</string>
    <string name="search_result">검색결과</string>
    <string name="next">다음</string>
    <string name="previous">이전</string>
    <string name="one_view_worth_na_thousand_words">One <b>View</b> Worth\nA Thousand <b>Words.</b></string>
    <string name="user_account_info">자신을 소개해주세요.</string>
    <string name="select_img">배경이미지 선택</string>
    <string name="introduce">한줄 소개</string>
    <string name="personal_info_terms">약관에 대한 이용 안내\n반준수 코퍼레이션\n해당 고객님의 모든 정보는 굳이 알지 않아도 전지전능하지 않은 준수가 그건 알고 있으며 만약 거부할시 C언어만 9학기를 듣게 되니 주의하시기 바랍니다 그럼 20000</string>
    <string name="default_introduce">한줄소개 문구입니다</string>
    <string name="default_name">USERNAME</string>
    <string name="my_profile">내 프로필</string>
    <string name="point_info">포인트 정보</string>
    <string name="setting">설정</string>
    <string name="point">Point.</string>
    <string name="step">%d단계</string>


    <!--changed by time main comment-->
    <string name="time_morning_comment">아침을 먹는 것을 잊지 마세요!</string>
    <string name="time_lunch_comment">맛있는 점심을 드셨나요?</string>
    <string name="time_dinner_comment">즐거운 저녁식사 되시기 바랍니다.</string>
    <string name="time_night_comment">야식은 몸에 해롭습니다.\n밤에 보는 요리도 그렇죠</string>


</resources>
