<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="match_parent"
    tools:context=".fragment.TermsFragment"
    android:layout_margin="@dimen/margin_medium"
    android:background="@color/colorPrimary"
    android:id="@+id/terms_frag"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_small"
        android:background="@color/colorWhite">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_small"
        android:text="@string/personal_info_terms"
        style="@style/TextAppearance.MaterialComponents.Body1"/>
    </ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_margin="@dimen/margin_small"
        android:layout_gravity="bottom">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            style="@style/TextAppearance.SurviveRecipe.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryLight"
            android:text="@string/disagree"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            style="@style/TextAppearance.SurviveRecipe.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryLight"
            android:text="@string/agree"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>