<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileSettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/ToolbarTextAppearance"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/ToolbarTextAppearance"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbarSignUp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarSignUp"
                app:layout_collapseMode="pin"
                android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/user_account_info">

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SigninActivity">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEmailSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:text="@string/next"
                android:textAlignment="center"
                android:theme="@style/logintoemail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLayoutUserName" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnImgSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:text="@string/select_img"
                android:textAlignment="center"
                android:theme="@style/logintoemail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagePreviewProSetting" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutUserName"
                style="@style/input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/introduce"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnImgSignUp" />

            <ImageView
                android:id="@+id/imagePreviewProSetting"
                android:layout_width="wrap_content"
                android:layout_height="237dp"
                android:scaleType="fitXY"
                android:src="@drawable/mapatofu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtNameSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_name"
                android:textColor="@color/colorWhite"
                android:textSize="30sp"
                android:layout_marginStart="@dimen/margin_medium"
                app:layout_constraintBottom_toTopOf="@+id/textview_userprofile_introduce"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textview_userprofile_introduce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:text="@string/default_introduce"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/imagePreviewProSetting"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>