<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.RecipeProgressFragment">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/imageview_recipeProgress_video"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/mapatofu"
                android:fitsSystemWindows="true"
                android:theme="@style/AppTheme.AppBarOverlay" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_recipeProgress_progress"
                style="@style/TextAppearance.SurviveRecipe.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:layout_margin="@dimen/margin_medium"
                android:text="@string/step"
                app:layout_anchor="@id/imageview_recipeProgress_video"
                app:layout_anchorGravity="bottom|left|end" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_extra_large"
            android:layout_gravity="bottom"
            android:layout_margin="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_recipeProgress_prev"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorSecondary"
                android:text="@string/previous"
                android:textColor="@color/colorBlack"
                app:cornerRadius="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_recipeProgress_next"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/next"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>